# charity-blink-solana

./: .gitignore  LICENSE  README.md
api-actions-basiscs/: package-lock.json  package.json
api-actions-basiscs/.next/: trace
api-actions-basiscs/.next/cache/: .tsbuildinfo
api-actions-basiscs/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
api-actions-basiscs/.next/server/vendor-chunks/: @noble.js  @solana.js  base-x.js  bigint-buffer.js  bindings.js  bn.js.js  borsh.js  bs58.js  bufferutil.js  eventemitter3.js  file-uri-to-path.js  jayson.js  next.js  node-fetch.js  node-gyp-build.js  rpc-websockets.js  safe-buffer.js  superstruct.js  text-encoding-utf-8.js  tr46.js  tweetnacl.js  utf-8-validate.js  uuid.js  webidl-conversions.js  whatwg-url.js
charity-frontend/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
charity-frontend/src/: App.tsx  main.tsx
charity-frontend/src/components/: CharityComponent.tsx  WalletContextProvider.tsx
charity-frontend/src/components/buttons/: air-drop-btn.tsx  send-sol-btn.tsx
charity-frontend/src/components/charity-contract/: CharityContractInterface.tsx
charity-frontend/src/config/: theme.ts
charity-frontend/src/utils/: CharityService.ts
charity_contract/: Anchor.toml  package-lock.json  package.json
charity_contract/programs/charity_contract/: Cargo.toml
charity_contract/programs/charity_contract/src/: lib.rs
charity_contract/tests/: charity_contract.ts
(+11 files in other folders)
